# ChemPare

./: .bandit  .coveragerc  .dmypy.json  .env  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  LabChem.py  LaboratoriumDiscounter.py  Makefile  Onyxmet.py  README.md  README.txt  S3.py  class_utils.py  get_CAS.py  main.py  main2.py  module-test.py  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt  search_factory.py  setup.py
.github/workflows/: python-app.yml  static.yml
.trunk/: trunk.yaml
.trunk/configs/: .isort.cfg  ruff.toml
chempare/: search_factory.py
chempare/datatypes/: product.py
chempare/suppliers/: supplier_3schem.py  supplier_chemsavers.py  supplier_esdrei.py  supplier_ftfscientific.py  supplier_laballey.py  supplier_labchem.py  supplier_laboratoriumdiscounter.py  supplier_loudwolf.py  supplier_warchem.py
coverage-html/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_definitions_py.html  z_16ec24dfcbc6f859_supplier_3schem_py.html  z_16ec24dfcbc6f859_supplier_base_py.html  z_16ec24dfcbc6f859_supplier_biofuranchem_py.html  z_16ec24dfcbc6f859_supplier_carolinachemical_py.html  z_16ec24dfcbc6f859_supplier_chemsavers_py.html  z_16ec24dfcbc6f859_supplier_esdrei_py.html  z_16ec24dfcbc6f859_supplier_ftfscientific_py.html  z_16ec24dfcbc6f859_supplier_laballey_py.html  z_16ec24dfcbc6f859_supplier_labchem_py.html  z_16ec24dfcbc6f859_supplier_laboratoriumdiscounter_py.html  z_16ec24dfcbc6f859_supplier_loudwolf_py.html  z_16ec24dfcbc6f859_supplier_onyxmet_py.html  z_16ec24dfcbc6f859_supplier_synthetika_py.html  z_16ec24dfcbc6f859_supplier_tcichemicals_py.html  z_16ec24dfcbc6f859_supplier_warchem_py.html  z_46b8cfbe62bd2f21___init__-disabled_py.html  z_46b8cfbe62bd2f21_class_utils_py.html  z_46b8cfbe62bd2f21_exceptions_py.html  z_46b8cfbe62bd2f21_search_factory_py.html  z_46b8cfbe62bd2f21_utils_py.html  z_4d32ad9c08b433a7_server_py.html  z_5beba86424fffbba_suppliers_py.html  z_689c4574d7e3fc63_chempare_cli_py.html  z_689c4574d7e3fc63_main_py.html  z_689c4574d7e3fc63_query_supplier_py.html  z_77cdb1f78c33f189_base_test_py.html  z_77cdb1f78c33f189_test_supplier_3schem_py.html  z_77cdb1f78c33f189_test_supplier_chemsavers_py.html  z_77cdb1f78c33f189_test_supplier_esdrei_py.html  z_77cdb1f78c33f189_test_supplier_ftfscientific_py.html  z_77cdb1f78c33f189_test_supplier_laballey-with-mocks_py.html  z_77cdb1f78c33f189_test_supplier_laballey_py.html  z_77cdb1f78c33f189_test_supplier_labchem_py.html  z_77cdb1f78c33f189_test_supplier_laboratoriumdiscounter_py.html  z_77cdb1f78c33f189_test_supplier_loudwolf_py.html  (+14 more)
datatypes/: __init__.py  product.py  supplier.py
dev/: LabChem.py  LaboratoriumDiscounter.py  Onyxmet.py  S3.py  biofuranchem-test.sh  brave-browser.py  chemworld-test.sh  currency_parser.py  currency_test.py  custom-browser.py  custom-datatypes.py  ftfscientific-test.sh  fuzz-test.py  get_CAS.py  get_quantity_from_title.py  module-test.py  osa.scpt  price-pattern-test.py  temporary-terminal.py
docs/: generate-docs.sh
requirements/: common.txt  dev.txt
scripts/: clear-python-cache  pcat  typecheck
src/: definitions.py
src/chempare/: __init__.py  _constants.py  class_utils.py  exceptions.py  search_factory.py  ui.py  utils.py
src/chempare/api/: server.py
src/chempare/cli/: chempare_cli.py  main.py  query_supplier.py
src/chempare/datatypes/: __init__.py  price.py  product.py  quantity.py  supplier.py  variant.py
src/chempare/suppliers/: __init__.py  supplier_3schem.py  supplier_base.py  supplier_biofuranchem.py  supplier_bunmurralabs.py  supplier_carolinachemical.py  supplier_chemsavers.py  supplier_esdrei.py  supplier_ftfscientific.py  supplier_hbarsci.py  supplier_laballey.py  supplier_labchem.py  supplier_labchem.py.disabled  supplier_labchemde.py  supplier_laboratoriumdiscounter.py  supplier_loudwolf.py  supplier_onyxmet.py  supplier_shopifybase.py  supplier_synthetika.py  supplier_tcichemicals.py  supplier_warchem.py  supplier_wixbase.py
src/chempare/utils/: __init__.py  _cas.py  _currency.py  _env.py  _general.py  _html.py  _quantity.py  bsoup4.py  cas.py  class_utils.py  currency.py  environment.py  general.py  html.py  quantity.py  utils.py
suppliers/: __init__.py  supplier_3schem.py  supplier_base.py  supplier_chemsavers.py  supplier_esdrei.py  supplier_ftfscientific.py  supplier_laballey.py  supplier_labchem.py  supplier_laboratoriumdiscounter.py  supplier_loudwolf.py  supplier_onyxmet-threaded.py  supplier_onyxmet.py  supplier_synthetika.py  supplier_tcichemicals.py  supplier_template.py  supplier_template.py.txt  supplier_warchem.py
tests/: .env  conftest.py  mock_request_cache.py  test_class_utils.py  test_search_factory.py  test_verify_suppliers.py
tests/mock_data/: curl_request_mocker.py  laballey-get-getwidgets.json  mock_curl_cffi.py  mock_request_cache.py
tests/mock_data-back/TestSearchFactory/: 0bbe0f7625a1e032.pkl  0d0f707846aa0227.pkl  0e39e7873f982a50.pkl  10516807e2aee381.pkl  14dff5de7a605eeb.pkl  18ccde458c629c46.pkl  192ca170caa0f27f.pkl  1d9863f9cac930a1.pkl  21a3cc6b297f8941.pkl  228172e9643aa50b.pkl  2649cd8127207f09.pkl  283b0a2ec9945442.pkl  2a29fb9f79c277b0.pkl  364ca23de427f055.pkl  436edd034601a832.pkl  4851535f94cc7a7a.pkl  487024c5a5be78a6.pkl  4a4e0a4aaa963647.pkl  4d81807844e7740e.pkl  517a959dc345453a.pkl  5271fec05c90f450.pkl  (+51 more)
tests/suppliers/: base_test.py  nottest_supplier_laballey.py  test_mock.py  test_supplier_3schem.py  test_supplier_biofuranchem.py  test_supplier_chemsavers.py  test_supplier_esdrei.py  test_supplier_ftfscientific.py  test_supplier_laballey-with-mocks.py  test_supplier_laballey.py  test_supplier_labchem.py  test_supplier_laboratoriumdiscounter.py  test_supplier_loudwolf.py  test_supplier_onyxmet.py  test_supplier_s3chem.py  test_supplier_s3chem_bak.py  test_supplier_synthetika.py  test_supplier_tcichemicals.py  test_supplier_warchem.py
tests/unit/: test_class_utils.py  test_datatypes.py  test_env_vars.py  test_indirect.py  test_search_factory.py  test_suppliers.py  test_utils.py
typings/: datatypes.py  datatypes.pyi
(+792 files in other folders)
