[project]
name = "chempare"
version = "0.0.1"
description = "Reagent search utility"
authors = [
	# Maui3
	{ name = "Justin Hyland", email = "j@linux.com" },
	# spuos
]
maintainers = [
	# Maui3
	{ name = "Justin Hyland", email = "j@linux.com" },
	# spuos
]
readme = { file = "README.txt", content-type = "text/markdown" }
keywords = ["chemistry", "chemicals", "reagent", "reagents"]
dependencies = [
	"requests",
	"inquirer",
	"bs4",
	"rich",
	"abcplus",
	"typing",
	"enum34",
	"urllib3==1.26.6",
	"dataclasses",
	"numpy",
	"pathlib",
	"curl_cffi",
	"translate",
	"regex",
]

[project.urls]
Homepage = "https://github.com/YourHeatingMantle/ChemPare"
Documentation = "https://github.com/YourHeatingMantle/ChemPare/tree/main/documentation"
Repository = "https://github.com/YourHeatingMantle/ChemPare.git"

[project.optional-dependencies]
test = [
	"pytest",
	"pytest-cov",
	"pytest-xdist",
	"pylint-pytest",
	"pytest-instafail",
	"pytest-timeout",
	"pytest-pycodestyle",
	"pytest-env",
	"pycodestyle==2.4.0",
]
dev = ["pycodestyle==2.4.0"]

[project.scripts]
chemparecli = "chempare.cli.chempare_cli:main"
chemparemain = "chempare.cli.main:main"
querysupplier = "chempare.cli.query_supplier:init"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
# See https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#t-target-version
target-version = ["py39", "py310", "py311", "py312", "py313"]

# [tool.setuptools]
# packages = ["chempare"]
# package-dir = { "chempare" = "." }

[tool.setuptools.package-data]
chempare_cli = [
	".",
	"src",
	"src/scripts",
	"src/chempare/*",
	"chempare/*",
	"src/scripts/*",
]
# "pytest" = ["py.typed"]

[tool.setuptools.packages.find]
namespaces = true
where = [
	".",
	"src",
	"scripts",
	# "chempare",
	# "chempare/scripts",
	# "chempare/scripts/*",
	# "src/scripts",
	# "src/scripts/*",
	# "src/chempare",
	# "src/chempare/*",
	# "src/chempare/*/*",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rx -q -rx -n auto --color=yes --code-highlight=yes --cov=chempare"
testpaths = ["tests"]
pythonpath = [
	".",
	"chempare",
	"chempare/suppliers",
	"chempare/datatypes",
	"chempare/scripts",
]
# addopts = "-rfEX -p pytester --strict-markers"
python_files = ["test_*.py", "tests/*.py", "tests/*/*.py"]

xfail_strict = true
filterwarnings = []
markers = ["supplier", "webtest", "first", "second"]
